--- a/app/static/css_files/register_new.css
+++ b/app/static/css_files/register_new.css
@@ -164,3 +164,18 @@ input{
 	background: white;
 }
   
+
+/* BRENNAN addition: style the sample profile picture */
+.picture{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.picture img{
+    width: 205px;
+    height: 205px;
+    border-radius: 102.5px;
+    object-fit: cover;
+}
